--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "/akdata" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-repository: Substy/akdata
+repository: xulai1001/akdata
 
 analytics:
-  google: UA-143023875-1
+  baidu: true
 
 # Build settings
 markdown: kramdown
