--- a/_data/config.yml
+++ b/_data/config.yml
@@ -1,18 +1,18 @@
 js:
   - https://unpkg.zhimg.com/jquery@3.3.1/dist/jquery.min.js
-#  - https://unpkg.zhimg.com/popper.js@1.15.0/dist/popper.min.js
   - https://unpkg.zhimg.com/bootstrap@4.1.3/dist/js/bootstrap.min.js
-#  - https://unpkg.zhimg.com/bootstrap@4.1.3/dist/js/bootstrap.bundle.min.js
   - https://unpkg.zhimg.com/tablesorter@2.30.7/dist/js/jquery.tablesorter.min.js
   - https://unpkg.zhimg.com/lz-string@1.4.4/libs/lz-string.min.js
-#  - https://unpkg.zhimg.com/chart.js@2.8.0
-#  - https://unpkg.zhimg.com/loadjs@3.6.1/dist/loadjs.min.js
-
+  - https://hm.baidu.com/hm.js?4158ba36cc7a19f9ba8a547fa33b69da
+  - https://cdn.jsdelivr.net/npm/vue/dist/vue.js
+  - https://d3js.org/d3.v5.min.js
+  - https://cdn.jsdelivr.net/npm/c3@0.7.15/c3.min.js
 css:
   - https://unpkg.zhimg.com/bootstrap@4.1.3/dist/css/bootstrap.min.css
   - https://unpkg.zhimg.com/@fortawesome/fontawesome-free@5.7.0/css/all.min.css
   - /assets/css/common.css
   - /resources/akdata.css
+  - /assets/css/c3.css
 
 modules:
   - /assets/js/common.js
