--- a/_data/config.yml
+++ b/_data/config.yml
@@ -2,6 +2,7 @@ js:
   - https://unpkg.zhimg.com/jquery@3.3.1/dist/jquery.min.js
   - https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js
   - https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js
+  - /assets/js/shards.min.js
   - https://unpkg.zhimg.com/tablesorter@2.30.7/dist/js/jquery.tablesorter.min.js
   - https://unpkg.zhimg.com/lz-string@1.4.4/libs/lz-string.min.js
   - https://hm.baidu.com/hm.js?4158ba36cc7a19f9ba8a547fa33b69da
@@ -14,6 +15,7 @@ css:
   - /assets/css/common.css
   - /resources/akdata.css
   - /assets/css/c3.css
+  - /assets/css/shards.css
 
 modules:
   - /assets/js/common.js
