--- a/npm/package.json
+++ b/npm/package.json
@@ -1,7 +1,7 @@
 {
   "name": "akdata",
   "type": "module",
-  "version": "2.0.2-2",
+  "version": "2.1.0",
   "description": "Arknights DPS calculator core",
   "main": "akdata.js",
   "scripts": {
