--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@ _site/
 .jekyll-metadata
 *.bat
 Gemfile.lock
-assets/images/char/*
-assets/images/skin/*
-assets/images/skin2/*
+assets/images/char/
+assets/images/skin*/
+assets/images/prts/
 */__pycache__/*
 *.pyc
 */build/*
