--- a/_data/config.yml
+++ b/_data/config.yml
@@ -1,19 +1,34 @@
 js:
   - https://unpkg.zhimg.com/jquery@3.5.1/dist/jquery.min.js
-  - https://lib.baomitu.com/popper.js/2.9.3/umd/popper.min.js
-  - https://lib.baomitu.com/twitter-bootstrap/4.6.0/js/bootstrap.min.js
   - /assets/js/shards.min.js
-  - https://unpkg.zhimg.com/tablesorter@2.30.7/dist/js/jquery.tablesorter.min.js
-  - https://unpkg.zhimg.com/lz-string@1.4.4/libs/lz-string.min.js
   - https://hm.baidu.com/hm.js?4158ba36cc7a19f9ba8a547fa33b69da
-  - https://lib.baomitu.com/vue/2.6.14/vue.min.js
-  - https://lib.baomitu.com/d3/7.0.1/d3.min.js
-  - https://lib.baomitu.com/c3/0.7.20/c3.min.js
-  - https://lib.baomitu.com/echarts/5.2.0/echarts.min.js
-  - https://lib.baomitu.com/showdown/1.9.1/showdown.min.js
+  # domestic CDN
+  #- https://unpkg.zhimg.com/tablesorter@2.30.7/dist/js/jquery.tablesorter.min.js
+  #- https://lib.baomitu.com/popper.js/2.9.3/umd/popper.min.js
+  #- https://lib.baomitu.com/twitter-bootstrap/4.6.0/js/bootstrap.min.js
+  #- https://unpkg.zhimg.com/lz-string@1.4.4/libs/lz-string.min.js
+  #- https://lib.baomitu.com/vue/2.6.14/vue.min.js
+  # - https://lib.baomitu.com/d3/7.0.1/d3.min.js
+  # - https://lib.baomitu.com/c3/0.7.20/c3.min.js
+  # - https://lib.baomitu.com/echarts/5.2.0/echarts.min.js
+  # - https://lib.baomitu.com/showdown/1.9.1/showdown.min.js
+  # jsdelivr CDN
+  - https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js
+  - https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js
+  - https://cdn.jsdelivr.net/npm/tablesorter@2.31.3/dist/js/jquery.tablesorter.combined.min.js
+  - https://cdn.jsdelivr.net/npm/lz-string@1.4.4/libs/lz-string.min.js
+  - https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js
+  - https://cdn.jsdelivr.net/npm/d3@5.16.0/dist/d3.min.js
+  - https://cdn.jsdelivr.net/npm/c3@0.7.20/c3.min.js
+  - https://cdn.jsdelivr.net/npm/echarts@5.2.2/dist/echarts.min.js
+  - https://cdn.jsdelivr.net/npm/showdown@1.9.1/dist/showdown.min.js
+
 css:
-  - https://lib.baomitu.com/twitter-bootstrap/4.6.0/css/bootstrap.min.css
+  #- https://lib.baomitu.com/twitter-bootstrap/4.6.0/css/bootstrap.min.css
   - https://unpkg.zhimg.com/@fortawesome/fontawesome-free@5.7.0/css/all.min.css
+  # jsdelivr CDN
+  - https://cdn.jsdelivr.net/npm/c3@0.7.20/c3.min.css
+  - https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css
   - /assets/css/common.css
   - /resources/akdata.css
   - /assets/css/c3.css
@@ -21,4 +36,4 @@ css:
 
 modules:
   - /assets/js/common.js
-  - /resources/akdata.js?ver=211220
+  - /resources/akdata.js?ver=211221
