Apr 26 v1 optimization of npm module. dpsv2 currently deprecated

--- a/npm/package.json
+++ b/npm/package.json
@@ -1,9 +1,9 @@
 {
   "name": "akdata",
   "type": "module",
-  "version": "2.1.1",
+  "version": "3.0.0-alpha",
   "description": "Arknights DPS calculator core",
-  "main": "akdata.js",
+  "main": "akdata.esm.js",
   "types": "akdata.d.ts",
   "scripts": {
     "test": "node test.js"
