--- a/_data/config.yml
+++ b/_data/config.yml
@@ -8,7 +8,7 @@ js:
   - https://lib.baomitu.com/twitter-bootstrap/4.6.0/js/bootstrap.min.js
   - https://lib.baomitu.com/lz-string/1.4.4/lz-string.min.js
   - https://lib.baomitu.com/vue/2.6.14/vue.min.js
-  - https://lib.baomitu.com/d3/7.0.1/d3.min.js
+  - /assets/js/d3.min.js
   - https://lib.baomitu.com/c3/0.7.20/c3.min.js
   - https://lib.baomitu.com/echarts/5.3.2/echarts.min.js
   - https://lib.baomitu.com/showdown/1.9.1/showdown.min.js
@@ -27,13 +27,13 @@ css:
   - https://lib.baomitu.com/twitter-bootstrap/4.6.0/css/bootstrap.min.css
   - https://unpkg.zhimg.com/@fortawesome/fontawesome-free@5.7.0/css/all.min.css
   # jsdelivr CDN
-  - https://cdn.jsdelivr.net/npm/c3@0.7.20/c3.min.css
+  #- https://cdn.jsdelivr.net/npm/c3@0.7.20/c3.min.css
+  - /assets/css/c3.min.css
   #- https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css
   - /assets/css/common.css
   - /resources/akdata.css
-  - /assets/css/c3.css
   - /assets/css/shards.css
 
 modules:
   - /assets/js/common.js
-  - /resources/akdata.js?ver=211221
+  - /resources/akdata.js?ver=220522
